--- a/navigation.html
+++ b/navigation.html
@@ -4,62 +4,7 @@
     <title>Navigation</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-  span{
-    color: white;
-  }
-  body{
-    background-image: url(navBack.jpg);
-    background-repeat: repeat-x;  
-  }
-
-.overlay {
-  height: 100%;
-  width: 100%;
-  display: none;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;  
-}
-
-.overlay-content {
-  position: relative;
-  top: 70%;
-  width: 100%;
-  text-align: center;
-  margin-top: 30px;
-}
-
-.overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 36px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-  color: #f1f1f1;
-}
-
-.overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-  font-size: 40px;
-  top: 15px;
-  right: 35px;
-  }
-}
-</style>
+    <link rel="stylesheet" type="text/css" href="navstyle.css">
 </head>
 <body>
 
@@ -74,15 +19,7 @@
 
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
 
-<script>
-function openNav() {
-  document.getElementById("myNav").style.display = "block";
-}
-
-function closeNav() {
-  document.getElementById("myNav").style.display = "none";
-}
-</script>
+ <script src="navscript.js"></script>
      
 </body>
 </html>
