--- a/wind.html
+++ b/wind.html
@@ -3,159 +3,8 @@
 <head>
     <title>Wind</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="stylewind.css">
 </head>
-<style>
-    body,
-html {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    background: linear-gradient(45deg, #13547a, #80d0c7);
-}
-
-#tree {
-    position: fixed;
-    height: 670px;
-    right: 0px;
-    bottom: 0px;
-    z-index: 200;
-}
-
-svg {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    right: 0;
-}
-
-path {
-    stroke-dasharray: 800;
-    stroke-dashoffset: 800;
-    animation: dash 8s ease-in forwards infinite;
-}
-
-path:nth-child(1) {
-    animation-delay: 5s;
-}
-
-path:nth-child(2) {
-    animation-delay: 10s;
-}
-
-path:nth-child(3) {
-    animation-delay: 16s;
-}
-
-path:nth-child(4) {
-    animation-delay: 22s;
-}
-
-path:nth-child(5) {
-    animation-delay: 29s;
-}
-
-path:nth-child(6) {
-    animation-delay: 34s;
-}
-
-@keyframes dash {
-    0% {
-        stroke-dashoffset: 800;
-    }
-
-    10% {
-        stroke-dasharray: 400;
-        stroke-dashoffset: 0;
-    }
-
-    20%,
-    100% {
-        stroke-dasharray: 800;
-        stroke-dashoffset: -800;
-    }
-}
-
-#fallingLeaves {
-    text-align: center;
-    opacity: .7;
-}
-
-  span {
-    display: inline-block;
-    width: 80px;
-    height: 81px;
-    margin: -280px 40px 54px -34px;
-    background: url("leaf.png");
-    animation: fallingLeaves 5s infinite linear;
-}
-
-#fallingLeaves span:nth-child(6n) {
-
-    animation-delay: 1.3s;
-}
-
-#fallingLeaves span:nth-child(6n+1) {
-
-    animation-delay: 1.5s;
-}
-
-#fallingLeaves span:nth-child(6n+3) {
-
-      animation-delay: 2.1s;
-}
-#fallingLeaves span:nth-child(6n+4) {
-
-     animation-delay: 2.6s;
-}
-#fallingLeaves span:nth-child(8n+5s) {
-
-    animation-delay: 2.8s;
-}
-#fallingLeaves span:nth-child(6n+5s) {
-
-    animation-delay: 3.1s;
-}
-
-#fallingLeaves span:nth-child(7n+3s) {
-
-    animation-delay: 3.5s;
-}
-#fallingLeaves span:nth-child(4n+3s) {
-
-    animation-delay: 4.5s;
-}
-
-@keyframes fallingLeaves {
-    0% {
-        opacity: .7;
-
-        transform: translate(0, 0px) rotateZ(0deg);
-    }
-
-    65% {
-        opacity: .7;
-
-        transform: translate(-500px, 600px) rotateZ(270deg);
-    }
-
-    100% {
-        opacity: 0;
-
-        transform: translate(-800px, 800px) rotateZ(360deg);
-    }
-}
-
-@keyframes disappear{
-  0%{
-    opacity: 1;
-  }
-  100%{
-    opacity:0;
-  }
-}
-
-</style>
 
 <body>
     <img id="tree" src="tree.png" alt="tree" />
@@ -189,20 +38,7 @@ path:nth-child(6) {
         <span id="leaf"></span>
         <span id="leaf"></span>
     </div>
-    <script>
-    var x = document.getElementById("tree");
-    var y = document.getElementById("leaf");
-
-    function disappear() {
-        if (x.style.display === "none") {
-            x.style.display = "block";
-        } else {
-            x.style.display = "none";
-        }
-    }
-
-    document.addEventListener("click", disappear);
-    </script>
+    <script src="scriptwind.js"></script>
 </body>
 
 </html>
